2011-08-06  Robert Larice
 * src/frontend/shyu.c :
   bug fix, tranJob was used instead of pssJob

2011-08-06  Robert Larice
 * src/winmain.c :
   another type fix for Visual Studio, QUIT_BUTTON_ID

2011-08-06  Robert Larice
 * src/spicelib/devices/dev.c :
  fix broken commit `type fix for Visual Studio'

2011-08-06  Holger Vogt
 * inpcom.c: code beautify, bug no. 3386184
 * resource.c, resource.h, com_sysinfo.c: replace size_t by unsigned long long

2011-08-05  Robert Larice
 * src/spicelib/devices/dev.c :
   type fix for Visual Studio

2011-08-05  Robert Larice
 * src/include/ngspice.h :
   disable Visual Studio "warning: C4127: conditional expression is constant"

2011-08-05  Robert Larice
 * src/maths/cmaths/cmath2.c :
   rewrite to fix potential (actuall impossible) usage of variable `c'

2011-08-05  Robert Larice
 * src/spicelib/parser/inp2m.c :
   fix warning of potential (actuall impossible) usage of uninitialized node5..7

2011-08-04 Holger Vogt
 * dcpss.c: tiny update to obtain compilation with MS VS 2008,
   code beautyfied
 * winmain.c, dcpss.c: Windows progress message improved

2011-08-04 Paolo Nenzi
 * (new) tests/pss ,
 * (new) tests/pss/colpitt_osc_pss.cir ,
 * (new) tests/compl_cross_quad_osc_pss.cir ,
 * (new) tests/hartley_osc_pss.cir ,
 * (new) tests/ring_osc_pss.cir ,
 * (new) tests/vackar_osc_pss.cir ,
 * (new) tests/vdp_osc_pss.cir :
   Added example files for pss from Stefano Perticaroli.

2011-08-04 Robert Larice
 * src/frontend/commands.c ,
 * src/frontend/runcoms.c ,
 * src/frontend/runcoms.h ,
 * src/frontend/shyu.c ,
 * src/frontend/spiceif.c ,
 * src/include/Makefile.am ,
 * src/include/cktdefs.h ,
 * src/spicelib/analysis/Makefile.am ,
 * src/spicelib/analysis/analysis.c ,
 * src/spicelib/parser/inp2dot.c ,
 * (new) src/include/pssdefs.h ,
 * (new) src/spicelib/analysis/dcpss.c ,
 * (new) src/spicelib/analysis/pssaskq.c ,
 * (new) src/spicelib/analysis/pssinit.c ,
 * (new) src/spicelib/analysis/psssetp.c :